--- a/RerMobile/RerMobile/Page1.xaml
+++ b/RerMobile/RerMobile/Page1.xaml
@@ -4,25 +4,59 @@
              x:Class="RerMobile.Page1"
              Title="Регистрация">
     <ContentPage.Content>
-        
-        <StackLayout>
-            <Label Text="E-mail" FontSize="16" HorizontalOptions="Start" TextColor="Black" Margin="55,0,0,0"></Label>
-            <Entry HorizontalOptions="Center" WidthRequest="280" BackgroundColor="Gray"></Entry>
+
+        <StackLayout Padding="50,0" Margin="0,50,0,0">
             
-            <Label Text="Логин" FontSize="16" HorizontalOptions="Start" TextColor="Black" Margin="55,0,0,0"></Label>
-            <Entry HorizontalOptions="Center" WidthRequest="280" BackgroundColor="Gray"></Entry>
-
-            <Label Text="Пароль" FontSize="16" HorizontalOptions="Start" TextColor="Black" Margin="55,0,0,0"></Label>
-            <Entry HorizontalOptions="Center" WidthRequest="280" BackgroundColor="Gray"></Entry>
-
-            <Label Text="Пароль" FontSize="16" HorizontalOptions="Start" TextColor="Black" Margin="55,0,0,0"></Label>
-            <Entry HorizontalOptions="Center" WidthRequest="280" BackgroundColor="Gray"></Entry>
-
-            <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
-                <Button Text="Зарегистрироваться"></Button>
+            <StackLayout Spacing="90">
+                
+                <Label 
+                    Text="E-mail" TextColor="Black" 
+                    Margin="10,10,60,0" FontSize="20"></Label>
+                
+                <Frame Margin="5,-80" BorderColor="Black">
+                    <Entry x:Name="EmailTxt" TextColor="Black" 
+                           Background="White" Margin="-10,-19,-10,-19"
+                           Keyboard="Email"/>
+                </Frame>
+                
+                <Label Text="Логин" TextColor="Black" 
+                       Margin="10,10,60,0" FontSize="20"></Label>
+                
+                <Frame Margin="5,-80" BorderColor="Black">
+                    <Entry x:Name="LoginTxt" TextColor="Black" 
+                           Background="White" Margin="-10,-19,-10,-19" 
+                           Keyboard="Text"/>
+                </Frame>
+                
+                <Label Text="Пароль" TextColor="Black" 
+                       Margin="10,10,60,0" FontSize="20"></Label>
+                
+                <Frame Margin="5,-80" BorderColor="Black">
+                    <Entry x:Name="PasswordTxt" TextColor="Black" 
+                           Background="White" Margin="-10,-19,-10,-19"
+                           IsPassword="True"/>
+                </Frame>
+                
+                <Label Text="Пароль" TextColor="Black" 
+                       Margin="10,10,60,0" FontSize="20"></Label>
+                
+                <Frame Margin="5,-80" BorderColor="Black">
+                    <Entry x:Name="PasswordCompleteTxt" TextColor="Black" 
+                           Background="White" Margin="-10,-19,-10,-19" 
+                           IsPassword="True"/>
+                </Frame>
+                
+            </StackLayout>
+            
+            <StackLayout Orientation="Horizontal">
+                <Button Margin="0,120,0,0"
+                    x:Name="BtnREG" Font="14" TextColor="black"
+                    BorderColor="Black" BackgroundColor="LightGray"
+                    BorderWidth="1" Text="Зарегистрироваться"
+                    HorizontalOptions="CenterAndExpand"/>
             </StackLayout>
             
         </StackLayout>
-        
+
     </ContentPage.Content>
 </ContentPage>
