--- a/RerMobile/RerMobile/Pages/ProjectPage.xaml
+++ b/RerMobile/RerMobile/Pages/ProjectPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RerMobile.Page2" Title="Проекты">
+             x:Class="RerMobile.ProjectPage" Title="Проекты">
     <ContentPage.Resources>
         <ResourceDictionary>
             <x:Array x:Key="projects" Type="{x:Type x:String}">
